adding changes for project

--- a/work.html
+++ b/work.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>work</title>
+	<link rel="stylesheet" href="boots/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -10,7 +11,7 @@
 <header>
 	<nav>
 		<ul>
-			<li><a href="jason.html">Jason</a></li>
+			<li><a href="about.html">About</a></li>
 			<li><a href="education.html">Education</a></li>
 			<li><a href="work.html">Work</a></li>
 			<li><a href="contact.html">Contact</a></li>
@@ -20,7 +21,7 @@
 
 <main>
 	<h1>Work</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa consequuntur, pariatur ullam minima officia at culpa ipsam aut architecto dicta nemo blanditiis iste est veniam id reprehenderit, modi molestiae totam?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi labore, amet iusto! Voluptatem praesentium, odit inventore alias mollitia aut possimus nostrum quaerat. Quaerat excepturi vitae eius, facere nobis dolores totam!</p>
+	
 </main>
 <footer>
 	<h2>Thank You for visiting my on-line project site.</h2>
@@ -29,6 +30,7 @@
 
 
 <script src="js/script.js"></script>
+
 
 </body>
 </html>
