--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Contact</title>
+	<link rel="stylesheet" href="boots/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -10,7 +11,7 @@
 <header>
 	<nav>
 		<ul>
-			<li><a href="jason.html">Jason</a></li>
+			<li><a href="about.html">About</a></li>
 			<li><a href="education.html">Education</a></li>
 			<li><a href="work.html">Work</a></li>
 			<li><a href="contact.html">Contact</a></li>
@@ -29,6 +30,7 @@
 
 
 <script src="js/script.js"></script>
+
 
 </body>
 </html>
