adding work link page

--- a/work.html
+++ b/work.html
@@ -21,7 +21,9 @@
 
 <main>
 	<h1>Work</h1>
-	
+
+
+	<a href="http://mejason64.github.io/businesscoach"  target="_blank">click here</a>
 </main>
 <footer>
 	<h2>Thank You for visiting my on-line project site.</h2>
